plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
    id 'org.beryx.runtime' version '1.11.4'
    id "com.github.johnrengelman.shadow" version "6.1.0"
}

version '1.0'

sourceCompatibility = '15'
mainClassName = 'Launcher'
compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.jetbrains:annotations:19.0.0'
    testImplementation group: 'de.saxsys', name: 'jfx-testrunner', version: '1.2'
    testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.1.6'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.7.0'
    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.7.0'
    testImplementation group: 'org.junit.platform', name: 'junit-platform-suite-api', version: '1.7.0'
    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.1.2'
    implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.7'
    implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.10'
    implementation group: 'org.reactfx', name: 'reactfx', version: '1.4.1'
    implementation group: 'io.reactivex.rxjava2', name: 'rxjavafx', version: '2.2.2'
    implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.2.2'
    implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.0'
}

run {
    jvmArgs = [
            "--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
            "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
            "--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
            "--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
            "--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
            "--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
    ]
}


javafx {
    version = "15"
    modules = [ 'javafx.controls' ,'javafx.fxml', 'javafx.web', 'javafx.graphics']
}

runtime {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        noConsole = true
    }
    jpackage {
        imageOptions += ['--icon', "src/main/resources/images/app.ico"]
    }
}